fixed a whole lotta nonsense - removed preloaded animations, fixed the menu, moved fonts to correct repo, udpated most css files, created a wrapper for the nav

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,8 +5,8 @@ services:
       dockerfile: Dockerfile.prod
     ports:
       - "8080:3000"
-    volumes:
-      - .:/app # this is watching my code live and hot loading it
+    volumes: #commented out for production use
+#      - .:/app # this is watching my code live and hot loading it
       - node_modules:/app/node_modules  # this is the code living on the container
 volumes:
   node_modules:
